@@ -4,6 +4,7 @@ import Model.BolsaDeValores;
 
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
@@ -15,7 +16,7 @@ public class LerArquivos {
 
     public ArrayList<BolsaDeValores> getBolsaDeValores(String nomeArquivo) {
         try {
-            input = new Scanner(Path.of(nomeArquivo));
+            input = new Scanner(Paths.get(nomeArquivo));
 
             input.nextLine();
 
@@ -24,16 +25,16 @@ public class LerArquivos {
 
                 BolsaDeValores bolsa = new BolsaDeValores();
 
-                DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
-                LocalDate date = LocalDate.parse(line[0], formatter);
+                String dataFormatada = LocalDate.parse(line[0], DateTimeFormatter.ofPattern("yyyy-MM-dd"))
+                        .format(DateTimeFormatter.ofPattern("dd-MM-yyyy"));
 
-                bolsa.setData(date);
+                bolsa.setData(dataFormatada);
                 bolsa.setTicket(line[1]);
                 bolsa.setOpen(Double.parseDouble(line[2]));
                 bolsa.setClose(Double.parseDouble(line[3]));
                 bolsa.setHigh(Double.parseDouble(line[4]));
                 bolsa.setLow(Double.parseDouble(line[5]));
-                bolsa.setVolume(Double.parseDouble(line[7]));
+                bolsa.setVolume(Double.parseDouble(line[6]));
 
                 bolsaDeValores.add(bolsa);
             }
